// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-51sx1c e1svm5jf0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-51sx1c e1svm5jf0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-51sx1c e1svm5jf0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-yzkyje e3btzd50"
      >
        <img
          alt="Dicta itaque nisi mollitia voluptate."
          class="css-1mtcrkq-ArticleListItem e1nfkf2e0"
          height="500"
          loading="lazy"
          srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
          title="aliquid deleniti quisquam"
          width="1000"
        />
      </div>
      <div
        class="css-0 e3btzd51"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Bob Cummings, Bob Cummings
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
